# awscliv2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  example.sh  mkdocs.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: on_pr_merge.yml  on_pr_open.yml  on_push.yml  on_push_coverage.yml  on_release.yml  on_release_merge.yml  on_release_publish.yml  update_docs.yml
awscliv2/: __init__.py  __main__.py  api.py  awscli_runner.py  cli_parser.py  constants.py  exceptions.py  installers.py  interactive_process.py  logger.py  main.py
docs/: 404.html  MODULES.md  README.md  _config.yml  index.html  sitemap.xml
docs/awscliv2/: api.md  awscli_runner.md  cli_parser.md  constants.md  exceptions.md  index.html  index.md  installers.md  interactive_process.md  logger.md  main.md  module.md
docs/awscliv2/api/: index.html
docs/awscliv2/cli_parser/: index.html
docs/awscliv2/constants/: index.html
docs/awscliv2/exceptions/: index.html
docs/awscliv2/installers/: index.html
docs/awscliv2/interactive_process/: index.html
docs/awscliv2/logger/: index.html
docs/awscliv2/main/: index.html
docs/awscliv2/module/: index.html
docs/search/: search_index.json
docs_local/: MODULES.md  README.md
docs_local/awscliv2/: awscli_runner.md  cli_parser.md  constants.md  exceptions.md  index.md  installers.md  interactive_process.md  logger.md  main.md  module.md
docsmd/: README.md  _config.yml
docsmd/awscliv2/: api.md  cli_parser.md  constants.md  exceptions.md  index.md  installers.md  interactive_process.md  logger.md  main.md  module.md
scripts/: before_commit.sh  example.py  example.sh  update_docs.sh
site/: 404.html  search.html
tests/: __init__.py  test_api.py  test_cli_parser.py  test_logger.py
