[project]
name = "awscliv2"
version = "2.3.1"
requires-python = ">=3.7"
description = "Wrapper for AWS CLI v2"
authors = [{ name = "Vlad Emelianov", email = "vlad.emelianov.nz@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["awscli", "awscliv2", "wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["importlib-metadata;python_version<'3.8'"]

[project.optional-dependencies]
build = ["setuptools"]

[tool.uv]
dev-dependencies = ["types-setuptools"]
package = true

[project.scripts]
awscliv2 = 'awscliv2.main:main_cli'
awsv2 = 'awscliv2.main:main_cli'


[project.urls]
Homepage = "https://github.com/youtype/awscliv2"
Documentation = "https://youtype.github.io/awscliv2/"
Repository = "https://github.com/youtype/awscliv2"
Changelog = "https://github.com/youtype/awscliv2/releases"
Issues = "https://github.com/youtype/awscliv2/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["awscliv2", "awscliv2.*"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
ignore_errors = true
omit = ["tests/*"]

[tool.pyright]
include = ["awscliv2"]
exclude = ["**/__pycache__", "tests", "typestubs"]
reportMissingImports = true
reportMissingTypeStubs = true
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.7"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
# preview = true
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "T",    # flake8-raise
    "LOG",  # flake8-logging
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "ANN",  # flake8-annotations
    "A",    # flake8-builtins
    "PTH",  # flake8-use-pathlib
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "PERF", # Perflint
    "FURB", # refurb
    "PL",   # pylint
]
ignore = [
    "D107",   # undocumented-public-init
    "D200",   # fits-on-one-line
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "D406",   # new-line-after-section-name
    "D407",   # dashed-underline-after-section
    "D413",   # blank-line-after-last-section
    "D417",   # undocumented-param
    "S310",   # suspicious-url-open-usage
    "S404",   # suspicious-subprocess-import
    "S603",   # subprocess-without-shell-equals-true
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    # "ANN401",  # any-type
    "TRY003",  # raise-vanilla-args
    "PERF203", # try-except-in-loop
    "PLR0913", # too-many-arguments
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["test_*.py", "*.pyi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
