[metadata]
name = awscliv2
version = file: awscliv2/version.txt
description = Wrapper for AWS CLI v2
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
url = https://github.com/vemel/awscliv2
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
    awscliv2 = awscliv2.main:main_cli
    awsv2 = awscliv2.main:main_cli

[options.package_data]
awscliv2 = 
    version.txt
    py.typed


[options.packages.find]
where = .
exclude = 
    tests
    *.tests
    *.tests.*
    tests.*
    __pycache__
include = 
    awscliv2
    awscliv2.*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py
ignore = E203,W503
max-complexity = 12
